[gd_scene load_steps=18 format=2]

[ext_resource path="res://sprites/Peter Spritesheet.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://entities/components/Shadow.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/exclamation.png" type="Texture" id=4]
[ext_resource path="res://entities/CharacterSpeechBubble.tscn" type="PackedScene" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.75, 0.4, 0.5 )

[sub_resource type="AtlasTexture" id=2]
flags = 23
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=3]
flags = 23
atlas = ExtResource( 1 )
region = Rect2( 400, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=4]
flags = 23
atlas = ExtResource( 1 )
region = Rect2( 800, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=5]
flags = 23
atlas = ExtResource( 1 )
region = Rect2( 1200, 0, 400, 400 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Walk",
"speed": 8.0
} ]

[sub_resource type="BoxShape" id=7]
extents = Vector3( 1, 0.5, 1 )

[sub_resource type="AnimationNodeBlendSpace2D" id=8]

[sub_resource type="AnimationNodeAnimation" id=9]

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Walk"

[sub_resource type="AnimationNodeBlendTree" id=11]
graph_offset = Vector2( -1009.84, -21 )
nodes/BlendSpace2D/node = SubResource( 8 )
nodes/BlendSpace2D/position = Vector2( -634.842, 202 )
nodes/Walk_Left/node = SubResource( 9 )
nodes/Walk_Left/position = Vector2( -440, 240 )
nodes/Walk_Right/node = SubResource( 10 )
nodes/Walk_Right/position = Vector2( -440, 60 )
node_connections = [ "output", 0, "Walk_Right" ]

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite3D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Player" type="KinematicBody" groups=[
"Player",
]]
collision_layer = 2
script = ExtResource( 2 )
interaction_marker_rotation_speed = 250.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0 )
shape = SubResource( 1 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.633926, 0 )
pixel_size = 0.003
billboard = 1
shaded = true
frames = SubResource( 6 )
animation = "Walk"
frame = 1
playing = true

[node name="Shadow" parent="." instance=ExtResource( 3 )]
pixel_size = 0.0017

[node name="InteractableDetectionZone" type="Area" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape" type="CollisionShape" parent="InteractableDetectionZone"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.477428, 0 )
shape = SubResource( 7 )

[node name="CanInteractWithShitIndicator" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.73416, 0.259429 )
pixel_size = 0.0015
texture = ExtResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 11 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/BlendSpace2D/blend_position = Vector2( 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Walk = SubResource( 12 )

[node name="CharacterSpeechBubble" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.37443, 0 )
character_name = "peter"

[connection signal="area_entered" from="InteractableDetectionZone" to="." method="_on_InteractableDetectionZone_area_entered"]
[connection signal="area_exited" from="InteractableDetectionZone" to="." method="_on_InteractableDetectionZone_area_exited"]
